[FIX] wrong align in checkbox inner

--- a/src/styles/mixins/checkbox.less
+++ b/src/styles/mixins/checkbox.less
@@ -137,8 +137,8 @@
                 width: 4px;
                 height: 8px;
                 position: absolute;
-                top: 2px;
-                left: 5px;
+                top: 1px;
+                left: 4px;
                 border: 2px solid #fff;
                 border-top: 0;
                 border-left: 0;
